--- a/app/src/main/res/layout/activity_choose_trash.xml
+++ b/app/src/main/res/layout/activity_choose_trash.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".cleantrashactivities.ChooseTrashActivity">
 
+    <ImageView
+        android:id="@+id/ChooseTrashActivityImageViewId"
+        android:layout_width="match_parent"
+        android:layout_height="352dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
+
+    <TextView
+        android:id="@+id/ChooseTrashActivityTextViewId"
+        android:layout_width="match_parent"
+        android:layout_height="189dp"
+        android:layout_marginTop="4dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ChooseTrashActivityImageViewId" />
+
+    <Button
+        android:id="@+id/ChooseTrashActivityButtonId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="POSPRZĄTAŁEM"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ChooseTrashActivityTextViewId" />
 </androidx.constraintlayout.widget.ConstraintLayout>
