Add preliminary backend to ChooseTrachActivity, ConfirmTrachActivity, PrizeTrachActivity.

--- a/app/src/main/res/layout/activity_prize_trash.xml
+++ b/app/src/main/res/layout/activity_prize_trash.xml
@@ -6,4 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".cleantrashactivities.PrizeTrashActivity">
 
+    <ImageView
+        android:id="@+id/prizeTrashActivityImageViewId"
+        android:layout_width="316dp"
+        android:layout_height="188dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
+
+    <TextView
+        android:id="@+id/prizeTrashActivityTextViewId"
+        android:layout_width="351dp"
+        android:layout_height="198dp"
+        android:layout_marginTop="32dp"
+        android:text="JESTEŚ SUPER"
+        app:layout_constraintTop_toBottomOf="@+id/prizeTrashActivityImageViewId"
+        tools:layout_editor_absoluteX="30dp" />
+
+    <TextView
+        android:id="@+id/prizeTrashActivityTextView2Id"
+        android:layout_width="294dp"
+        android:layout_height="88dp"
+        android:layout_marginTop="60dp"
+        android:text="Punkty dostaniesz po weryfikacji"
+        app:layout_constraintTop_toBottomOf="@+id/prizeTrashActivityTextViewId"
+        tools:layout_editor_absoluteX="62dp" />
+
+    <Button
+        android:id="@+id/prizeTrashActivitybutton2Id"
+        android:layout_width="302dp"
+        android:layout_height="69dp"
+        android:text="HOME"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prizeTrashActivityTextView2Id"
+        app:layout_constraintVertical_bias="0.235" />
 </androidx.constraintlayout.widget.ConstraintLayout>
