--- a/app/src/main/res/layout/activity_choose_trash.xml
+++ b/app/src/main/res/layout/activity_choose_trash.xml
@@ -12,8 +12,7 @@
         android:layout_height="352dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/ChooseTrashActivityTextViewId"
