wybierz punkt btn przy sprzataniu

--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -6,13 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".cleantrashactivities.CleanTrashActivity">
 
+
     <Button
         android:id="@+id/btnChoseMarker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="600dp"
-        android:text="Chose"
+        android:layout_marginTop="524dp"
+        android:drawableLeft="@drawable/ic_baseline_edit_location_24"
+        android:text="Wybierz punkt"
+        android:textColor="#353535"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
