--- a/app/src/main/res/layout/activity_choose_trash.xml
+++ b/app/src/main/res/layout/activity_choose_trash.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".cleantrashactivities.ChooseTrashActivity">
 
+
     <ImageView
         android:id="@+id/ChooseTrashActivityImageViewId"
         android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
         android:layout_height="350dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,30 +21,45 @@
     <TextView
         android:id="@+id/ChooseTrashActivityTextViewId"
         android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_height="150dp"
-        android:textAlignment="center"
+        android:layout_height="100dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="40dp"
         android:gravity="center"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ChooseTrashActivityImageViewId"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/ChooseTrashActivityImageViewId" />
 
-    <Button
-        android:id="@+id/ChooseTrashActivityButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="524dp"
-        android:drawableLeft="@drawable/ic_sweeping"
-        android:text="Sprzątam tutaj"
-        android:textColor="#353535"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_centerInParent="true"
+        app:layout_constraintTop_toBottomOf="@+id/ChooseTrashActivityTextViewId" >
+
+
+        <Button
+            android:id="@+id/ChooseTrashActivityButtonId"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_alignParentEnd="true"
+            android:drawableLeft="@drawable/ic_sweeping"
+            android:text="Sprzątam tutaj"
+            android:background="@color/blue_700"
+            android:textAlignment="center"
+            android:textColor="#353535"
+            android:textSize="20sp"
+            tools:layout_editor_absoluteX="56dp" />
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
