--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -6,4 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".RankingActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="Ranking"
+            android:textSize="30sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ListView
+                android:id="@+id/RankingActivityListViewUserNames"
+                android:layout_width="213dp"
+                android:layout_height="match_parent"
+                android:paddingLeft="20dp" />
+
+            <ListView
+                android:id="@+id/RankingActivityListViewPoints"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingRight="15dp" />
+        </LinearLayout>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
